@@ -1,6 +1,7 @@
 Version 1.1.18 (released ??-???-????)
 
   * fix exception raised by BDB-backed SVN repositories (issue #519)
+  * hide revision-less files when rcsparse is in use, too
 
 Version 1.1.17 (released 25-Oct-2012)
 
